--- a/cinema/examples/train/regression.yaml
+++ b/cinema/examples/train/regression.yaml
@@ -14,9 +14,12 @@ data:
   bmi:
     mean: 25.561040294207242
     std: 4.732639548868183
+  # ef:
+  #   mean: 27.698811590282546
+  #   std: 10.848138374627386
   ef:
-    mean: 27.698811590282546
-    std: 10.848138374627386
+    mean: 46.47
+    std: 19.97
 
 transform:
   prob: 0.5
@@ -35,12 +38,14 @@ train:
   lr: 1e-3
   min_lr: 1e-5
   n_warmup_epochs: 5
-  n_epochs: 20
+  n_epochs: 800
   max_n_ckpts: 1
-  batch_size: 4
+  batch_size: 28
   eval_interval: 1
   early_stopping:
-    patience: 5
+    metric: "val_mae"
+    mode: "min"
+    patience: 10
     min_delta: 1e-4
 
 model:
